--- a/src/new_paste.html
+++ b/src/new_paste.html
@@ -7,8 +7,9 @@
 <link rel="stylesheet" type="text/css" href="%{root}style.css">
 </head>
 <body>
-<h1>Create new paste</h1>
-<form method="POST" action="%{root}">
+<h1>Shodan Pasting Service</h1>
+<h2>Create new paste</h2>
+<form method="POST" action="%{root}" style="margin-top:1em">
 <p class="input"><label for="title" class="inputlabel">Title:</label><input type="text" name="title" class="text" value="%{title}"></input></p>
 <p class="input"><label for="author" class="inputlabel">Author:</label><input type="text" name="author" class="text"></input></p>
 <p class="input"><label for="highlighting" class="inputlabel">Highlighting:</label>
