--- a/src/show_paste.html
+++ b/src/show_paste.html
@@ -5,9 +5,9 @@
 <title>Shodan Pasting Service - %{title} by %{author}</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" type="text/css" href="%{root}style.css" />
-<link rel="stylesheet" href="%{root}highlight.js/github.css">
-<script src="%{root}highlight.js/highlight.js"></script>
-<script>
+<link rel="stylesheet" href="%{root}highlight.js/github.css" />
+<script src="%{root}highlight.js/highlight.pack.js" type="text/javascript"></script>
+<script type="text/javascript">
 hljs.tabReplace = '    ';
 hljs.initHighlightingOnLoad();
 </script>
