--- a/src/show_paste.html
+++ b/src/show_paste.html
@@ -4,13 +4,12 @@
 <head>
 <title>Shodan Pasting Service - %{title} by %{author}</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link rel="stylesheet" type="text/css" href="%{root}style.css" />
-<link rel="stylesheet" href="%{root}highlight.js/github.css" />
-<script src="%{root}highlight.js/highlight.pack.js" type="text/javascript"></script>
-<script type="text/javascript">
-hljs.tabReplace = '    ';
-hljs.initHighlightingOnLoad();
-</script>
+<link rel="stylesheet" type="text/css" href="%{root}style.css" />%{highlight_script}
+<style>
+span.line:before {
+    width: %{line_number_width};
+}
+</style>
 </head>
 <body>
 <h1>Shodan Pasting Service</h1>
@@ -23,8 +22,7 @@ hljs.initHighlightingOnLoad();
 <li class="menu"><a href="%{root}clone/%{id}">Clone this paste</a></li>
 <li class="menu"><a href="%{root}">New paste</a></li>
 </ul>
-<p class="linenumbers">%{line_numbers}</p   >
-<pre><code class="%{highlighting}" style="margin:0;padding:0">%{content}</code></pre>
+<pre><code%{highlighting}>%{content}</code></pre>
 </div>
 </body>
 </html>
