Improved performance by serving static content statically

--- a/src/new_paste.html
+++ b/src/new_paste.html
@@ -9,7 +9,7 @@
 <body>
 <h1>Shodan Pasting Service</h1>
 <h2>Create new paste</h2>
-<form method="post" action="%{root}" accept-charset="utf-8" style="margin-top:1em">
+<form method="post" action="%{root}new" accept-charset="utf-8" style="margin-top:1em">
 <p class="input"><label for="title" class="inputlabel">Title:</label><input type="text" id="title" name="title" class="text" value="%{title}"></input></p>
 <p class="input"><label for="author" class="inputlabel">Author:</label><input type="text" id="author" name="author" class="text"></input></p>
 <p class="input"><label for="highlighting" class="inputlabel">Highlighting:</label>
